--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "magic-life-counter",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "babelify": "^10.0.0",
+    "browserify": "^17.0.0",
+    "browserify-css": "^0.15.0",
+    "fs": "^0.0.1-security",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
-    "web-vitals": "^1.0.1"
+    "svgify": "^0.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
